<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.loginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_close"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/icon_arrow" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_edit"
                android:padding="10dp"
                android:text="@string/reset_password"
                android:textAlignment="center"
                android:textColor="@color/redd"
                android:textSize="25sp" >

            </TextView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="80sp"
            android:background="@drawable/bg_edit"
            android:padding="10dp"
            android:text="@string/no_problem_just_give_in_your_phone_number_and_we_will_send_you_a_link_to_reset_your_password"
            android:textAlignment="textStart"
            android:textColor="@color/redd"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="15dp"
            android:hint="@string/phone_number">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit"
                android:drawableStart="@drawable/icon_phone"
                android:drawablePadding="15dp"
                android:inputType="phone"
                android:padding="10dp"
                app:backgroundTint="@color/esbag" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_button"
            android:text="@string/send_link"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:backgroundTint="@color/redd" />


    </LinearLayout>


</RelativeLayout>